// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-1 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<body>
  <div>
    <button
      aria-haspopup="true"
      class="emotion-1"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M12 8a2 2 0 1 1 .001-4.001A2 2 0 0 1 12 8zm0 2a2 2 0 1 1-.001 4.001A2 2 0 0 1 12 10zm0 6a2 2 0 1 1-.001 4.001A2 2 0 0 1 12 16z"
              id="dots_svg__a"
            />
          </defs>
          <use
            xlink:href="#dots_svg__a"
          />
        </svg>
      </span>
    </button>
  </div>
</body>
`;

exports[`should render correctly when opened 1`] = `
<body>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-1 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
    <button
      aria-controls="menu-abc"
      aria-expanded="true"
      aria-haspopup="true"
      class="emotion-1"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M12 8a2 2 0 1 1 .001-4.001A2 2 0 0 1 12 8zm0 2a2 2 0 1 1-.001 4.001A2 2 0 0 1 12 10zm0 6a2 2 0 1 1-.001 4.001A2 2 0 0 1 12 16z"
              id="dots_svg__a"
            />
          </defs>
          <use
            xlink:href="#dots_svg__a"
          />
        </svg>
      </span>
    </button>
  </div>
  .emotion-2 {
  list-style: none;
  margin: 0;
  padding: 0;
  white-space: nowrap;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #DCDCE0;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #FFFFFF;
}

.emotion-0 {
  margin: 0;
  cursor: pointer;
  padding: 0.5rem 1rem;
  font-weight: bolder;
  outline: none;
  font-size: 0.875rem;
}

.emotion-0:first-of-type a {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-0:last-of-type a {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-0:hover,
.emotion-0:focus {
  background: #F2F2F7;
}

.emotion-3 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

<div
    class="emotion-3"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: 1300;"
  >
    <ul
      class="emotion-2"
      id="menu-abc"
      role="menu"
    >
      <li
        aria-disabled="false"
        class="emotion-0"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item #1
        </span>
      </li>
      <li
        aria-disabled="false"
        class="emotion-0"
        role="menuitem"
        tabindex="-1"
      >
        <span>
          Item #2
        </span>
      </li>
    </ul>
  </div>
</body>
`;
